# modern-cpp-examples

./: .gitignore  .gitmodules  README.md
boost-program-options-example/src/: main.cpp
c++-server/: CMakeLists.txt  CMakePresets.json  Dockerfile
c++-server/scripts/: build.sh  cpp-gen-mod.py  docker-build.sh
c++-server/src/server/: main.cpp
c++-server/src/server/net/http/: buffered-reader.cpp  buffered-reader.hpp  request-parser.cpp  request-parser.hpp
c++-server/src/server/os/posix/: posix.cpp  posix.hpp
c++-server/src/server/strutils/: strutils.cpp  strutils.hpp
chrono/: chrono.cpp  time-t.cpp
cmake-workspace-skeleton/calculator-workspace/: .editorconfig  CMakeLists.txt
cmake-workspace-skeleton/calculator-workspace/calculator-cli/: CMakeLists.txt
cmake-workspace-skeleton/calculator-workspace/calculator-cli/src/calculator/cli/: main.cpp
cmake-workspace-skeleton/calculator-workspace/calculator-core/: CMakeLists.txt  README.md
cmake-workspace-skeleton/calculator-workspace/calculator-core/include/calculator/core/: Calculator.h
cmake-workspace-skeleton/calculator-workspace/calculator-core/src/calculator/core/: Calculator.cpp
cmake-workspace-skeleton/calculator-workspace/calculator-core/src/calculator/core/parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
cmake-workspace-skeleton/calculator-workspace/calculator-core/src/calculator/core/parser/token/: Token.cpp  Token.h
conan-cmake-examples/hello-rang/: CMakeLists.txt  README.md  conanfile.txt  dev-requirements.txt
conan-cmake-examples/hello-rang/src/: main.cpp
constexpr/: constexpr  constexpr.cpp
cpu-intensive-ackermann/: Dockerfile  main.cpp
explict-keyword-example/: main.cpp
hello-coro/: compile_commands.json  main.cpp  readme.md
hello-coro/.cache/clangd/index/: main.cpp.82859F96C74FD8C3.idx  main2.cpp.B2F346C27DCDB679.idx
hello-coro/simple-executor/: compile_commands.json  main.cpp
modern-opengl/: CMakeLists.txt
modern-opengl/common/: CMakeLists.txt
modern-opengl/common/include/modern-opengl/common/: Timer.h
modern-opengl/common/src/modern-opengl/common/: Timer.cpp
modern-opengl/hello-world/: CMakeLists.txt
modern-opengl/hello-world/src/: main.cpp
not-so-modern/programacao-concorrente/: produtor-consumidor.cpp
parser/: bf.cpp
rover-simulator/: CMakeLists.txt
rover-simulator/src/: main.cpp
rover-simulator/src/rover/simulator/core/cmd/: Command.cpp  Command.h  RCKCommand.cpp  RCKCommand.h  TRNCommand.cpp  TRNCommand.h
simple-perceptron/: main.cpp
smart-ptr/: C++14 Best Practices.txt  smart-ptr.cpp
starter/: .gitignore  CMakeLists.txt  README.md
starter/scripts/: vcpkg-setup.sh
starter/starter-core/: CMakeLists.txt
starter/starter-core/include/starter/core/: AppEntry.h  Starter.h
starter/starter-core/include/starter/core/fs/: Paths.h
starter/starter-core/src/starter/core/: AppEntry.cpp  Starter.cpp
starter/starter-core/src/starter/core/fs/: Paths.cpp
starter/starter-gui/: CMakeLists.txt
starter/starter-gui/src/starter/gui/: main.cpp
starter/starter-gui/src/starter/gui/main-window/: MainWindow.cpp  MainWindow.glade  MainWindow.h
std-filesystem-examples/: main.cpp
structured-biding/: main.cpp
user-defined-literals/: .gitignore  user-defined-literals.cpp
